update about page and books pages

--- a/cn/index.html
+++ b/cn/index.html
@@ -17,29 +17,29 @@ description: 欢迎来到我的个人主页。
 
   <blockquote>
   <p>
-    XXXXXXXXXXXXXXx。
+    我是一名android开发工程师，目前就职于文思海辉技术有限公司。外协中国移动研究院，参与开发WiMo项目，主要负责完成android客户端。
   </p>
   </blockquote>
   <p>
-    <strong>Xxxxx</strong>: <a href="#"><span itemprop="name">XxxXxxx</span></a>, yyyyyyyyyyyyyyyyyyyyyyyy<a href="http://hi-github.github.io/project/">project</a>.
+    <strong>WiMo</strong>: <a href="#"><span itemprop="name">Android客户端</span></a>, 移动终端无线多媒体传送技术是支持高清音视频无线传输的技术协议，通过Wi-Fi作为传输手段，可实现移动终端与电视之间的屏幕与声音实时同步，有效扩展移动终端的展现能力。它是一种支持移动终端与大屏幕设备间无线、实时、高清音视频信息传输的技术，实现了以移动终端为核心的多屏共享互动。<a href="http://hi-github.github.io/project/">project</a>.
   </p>
   <p>
     这是<a href="/"><span itemprop="name">蒋彦涛</span></a>的个人主页。
-    <strong itemprop="role">wwwww</strong>xxxxxxxxx。
+    <strong itemprop="role">现在的角色是</strong>一名程序员。
   </p>
 
   <p>
-    目前，主要研究兴趣集中在<strong>基于内容的图像检索(CBIR)</strong>这一方向，平时我会关注和学习一些<strong>计算机视觉、Python科学计算、Linux、Django开发</strong>等方面的知识。
+    目前，主要研究兴趣集中在<strong>DLNA/Upnp协议</strong>媒体播放这一方向，平时我会关注和学习一些<strong>Ruby、Python科学计算、Linux、C/C++程序设计</strong>等方面的知识。
   </p>
 
   <p>
-    中度代码洁癖，喜欢使用Google和Apple的东西。对美非常没有抵抗力，看到美的东西就会拼命研究。当发现了一件值得做的事情之后，就会归隐若干天把其它的事撂一边。
+    中度代码洁癖，喜欢使用Google查阅资料。对技术相关的东西非常热衷，看到感兴趣的事物就会拼命研究。当发现了一件值得做的事情之后，就会沉静其中废寝忘食把其它的事撂一边。
   </p>
 
   <p>
     常用工具 :
-    <a>Python</a>,
-    <a>Matlab</a>,
+    <a>Eclipse</a>,
+    <a>Android Studio</a>,
     <a href="https://github.com/hi-github">GitHub</a>,
     <a>Google Chrome</a>,
   </p>
