--- a/index.html
+++ b/index.html
@@ -20,22 +20,20 @@ description: I am Jiang Yantao. .
   </h1>
   <blockquote>
   <p>
-    xxxxxx
+    I am an android development engineer , currently working Pactera Technology Limited. The Association of China Mobile Research Institute , involved in the development WiMo projects, mainly responsible for completing the android client.
   </p>
   </blockquote>
   <p>
-    <strong>xxxx</strong>: <a href="#"><span itemprop="name">XXxx</span></a>, xx<a href="http://hi-github.github.io/project/">project</a>.
+    <strong>WiMo</strong>: <a href="#"><span itemprop="name">Android Client</span></a>, Mobile terminals to support wireless multimedia transmission technology is high-definition audio and video wireless transmission technology protocol , via Wi-Fi as a means of transmission can be realized screen TV and sound between mobile terminals and real-time synchronization , demonstrated the ability to effectively expand the mobile terminal. It is a support between mobile terminals and large-screen device wireless , real-time , high-definition audio and video information transmission technology, the multi-screen sharing interactive mobile terminal as the core .<a href="http://hi-github.github.io/project/">project</a>.
   </p>
   <p>
-    I am <a href="/"><span itemprop="name">Jiang Yantao</span></a>. Willard is my English Name, which means great bravery. I completed my bachelor's degree in Faculty of Science at <a href="http://www.xidian.edu.cn/">Xidian University</a> of science and technology of the electronics information on July.1 2013. Now I am a 2nd year postgraduate student in Center for OPTical IMagery Analysis and Learning (OPTIMAL), <a href="http://english.ucas.ac.cn/Pages/default.aspx"><strong>University of Chinese Academy of Sciences</strong></a>. My advisor is Prof. Xuelong Li, Fellow IEEE. <!--<strong itemprop="role">interim CTO</strong>.--><!--  in <span itemprop="location">Paris</span>. -->
+    I am <a href="/"><span itemprop="name">Jiang Yantao</span></a>. hi-github is my github username. 
   </p>
   <p>
-    My research interests cover <a href="http://en.wikipedia.org/wiki/Multimedia_Information_Retrieval"><strong>Multimedia Information Retrieval</strong></a>,<a href="http://en.wikipedia.org/wiki/Computer_vision"><strong>Computer Vision</strong></a>,
-    <a href="http://en.wikipedia.org/wiki/Django"><strong>Web Development Based on Django</strong></a>,
-    and <a href="http://www.scientificpython.net/"><strong>Scientific Computing with Python</strong></a>.
+    Currently, the main research interests focus on <strong> DLNA/Upnp protocol </strong> media player that direction , usually I 'll learn some attention and <strong> Ruby, Python scientific computing , Linux, C / C ++ programming </strong > other aspects of knowledge .
   </p>  
   <p>
-    I'm a big fan of Git, Python, Django, and Linux. In my free time, I dive into writing blog, translating english book about technology, reading books to improve myself. Python is my favorite programming language now.
+    Moderate code over the top, like using Google access to information . Things related to technology is very keen to see the things that will be of interest to study hard . Once found something worth doing , it will calm sleepless nights among other things to put down the side.
   </p>
   <p>
     Interested? Here's my <a href="#"><strong>resume</strong></a>,
