--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: 欢迎来到我的个人主页。
   </p>
 
   <p>
-    目前，主要研究兴趣集中在<strong><a href="/file_pdf/upnp_program_dev_help_book.pdf">DLNA/Upnp协议<a/></strong>和<b>媒体播放</b>这一方向，平时我会关注和学习一些<strong>Ruby、Python科学计算、Linux、C/C++程序设计、算法和数据结构</strong>等方面的知识。
+    目前，主要研究兴趣集中在<strong><a href="/file_pdf/upnp_program_dev_help_book.pdf">DLNA/Upnp协议</a></strong>和<b>媒体播放</b>这一方向，平时我会关注和学习一些<strong>Ruby、Python科学计算、Linux、C/C++程序设计、算法和数据结构</strong>等方面的知识。
   </p>
 
   <p>
